src/objects/Custom_Instruction__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Number_Text__c</fullName>
        <label>ADCVD Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type_Text__c</fullName>
        <label>ADCVD Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Case</label>
        <referenceTo>ADCVD_Case__c</referenceTo>
        <relationshipLabel>Custom Instructions</relationshipLabel>
        <relationshipName>Custom_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADCVD_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Order</label>
        <referenceTo>ADCVD_Order__c</referenceTo>
        <relationshipLabel>Custom Instructions</relationshipLabel>
        <relationshipName>Custom_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AD_CVD_Module_Number__c</fullName>
        <label>AD/CVD Module Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Rate__c</fullName>
        <label>Applicable Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basis_for_Rate__c</fullName>
        <label>Basis for Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HM</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CV</fullName>
                </value>
                <value>
                    <fullName>NME</fullName>
                </value>
                <value>
                    <fullName>FA</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBP_Case_Number_Text__c</fullName>
        <label>CBP Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBP_Instructions_Category__c</fullName>
        <label>CBP Instructions Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADL</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>ARF-Admin Review Final</fullName>
                </value>
                <value>
                    <fullName>ARP-Admin Review Prelim</fullName>
                </value>
                <value>
                    <fullName>CIE</fullName>
                </value>
                <value>
                    <fullName>COR</fullName>
                </value>
                <value>
                    <fullName>FIN-Final Determination</fullName>
                </value>
                <value>
                    <fullName>FNO-Final Det w/Order</fullName>
                </value>
                <value>
                    <fullName>INF-Information Notice</fullName>
                </value>
                <value>
                    <fullName>INI-Initiation of Review</fullName>
                </value>
                <value>
                    <fullName>INJ-Injunction</fullName>
                </value>
                <value>
                    <fullName>INQ-Inquiry</fullName>
                </value>
                <value>
                    <fullName>LIQ-Liquidation</fullName>
                </value>
                <value>
                    <fullName>NSR-New Shipper Review</fullName>
                </value>
                <value>
                    <fullName>ORD-Order</fullName>
                </value>
                <value>
                    <fullName>OTH-Other</fullName>
                </value>
                <value>
                    <fullName>PRE-Preliminary</fullName>
                </value>
                <value>
                    <fullName>REV-Revocation</fullName>
                </value>
                <value>
                    <fullName>SCO-Scope</fullName>
                </value>
                <value>
                    <fullName>TER-Termination Notice</fullName>
                </value>
                <value>
                    <fullName>WRIT-Writ of Mandamus</fullName>
                </value>
                <value>
                    <fullName>coming</fullName>
                    <isActive>false</isActive>
                    <label>coming</label>
                </value>
                <value>
                    <fullName>later</fullName>
                    <isActive>false</isActive>
                    <label>later</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBP_Instructions_Sub_Category__c</fullName>
        <label>CBP Instructions Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADRV-Administrative Review</fullName>
                </value>
                <value>
                    <fullName>AFF-Affirmative</fullName>
                </value>
                <value>
                    <fullName>ALI-Auto Liquidation</fullName>
                </value>
                <value>
                    <fullName>ALIWE-Auto Liq Exception</fullName>
                </value>
                <value>
                    <fullName>AMD-Amend</fullName>
                </value>
                <value>
                    <fullName>COR-Correction</fullName>
                </value>
                <value>
                    <fullName>CTDIS-Court ORD Dissolved</fullName>
                </value>
                <value>
                    <fullName>FRM-Firm</fullName>
                </value>
                <value>
                    <fullName>GAP-Gap Period</fullName>
                </value>
                <value>
                    <fullName>INSCO-In Scope</fullName>
                </value>
                <value>
                    <fullName>NAFTA-NA Free Trd Agmt</fullName>
                </value>
                <value>
                    <fullName>NEG-Negative</fullName>
                </value>
                <value>
                    <fullName>ORD-Order</fullName>
                </value>
                <value>
                    <fullName>OUTSCO-Out of Scope</fullName>
                </value>
                <value>
                    <fullName>PARRES-Partial Rescission</fullName>
                </value>
                <value>
                    <fullName>PRELIM-Preliminary</fullName>
                </value>
                <value>
                    <fullName>REF-Refund</fullName>
                </value>
                <value>
                    <fullName>RES-Rescission</fullName>
                </value>
                <value>
                    <fullName>REV-Revocation</fullName>
                </value>
                <value>
                    <fullName>TMI-Mat Injury Threat</fullName>
                </value>
                <value>
                    <fullName>TRO-Temp Rest Order</fullName>
                </value>
                <value>
                    <fullName>coming</fullName>
                    <isActive>false</isActive>
                    <label>coming</label>
                </value>
                <value>
                    <fullName>later</fullName>
                    <isActive>false</isActive>
                    <label>later</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_Parent__c</fullName>
        <label>CI Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Concat_Text__c</fullName>
        <label>Case Concat Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity_Text__c</fullName>
        <label>Commodity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countervailed_Programs__c</fullName>
        <label>Countervailed Programs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_in_which_factors_were_valued__c</fullName>
        <description>Name of Country in which factors were valued</description>
        <inlineHelpText>Name of Country in which factors were valued</inlineHelpText>
        <label>Country in which factors were valued</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customs_Status__c</fullName>
        <label>Customs Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive - Company Deactivated</fullName>
                </value>
                <value>
                    <fullName>Inactive - Company Revoked</fullName>
                </value>
                <value>
                    <fullName>Inactive - Deactivated</fullName>
                </value>
                <value>
                    <fullName>Inactive - Final Exclusion</fullName>
                </value>
                <value>
                    <fullName>Inactive - Order Revoked</fullName>
                </value>
                <value>
                    <fullName>Inactive - Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Message_Loaded_in_ACE__c</fullName>
        <label>Date Message Loaded in ACE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IMN_NO__c</fullName>
        <label>IMN NO.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Custom Instructions</relationshipLabel>
        <relationshipName>Custom_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Date__c</fullName>
        <label>Message Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message_No__c</fullName>
        <label>Message No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Period_Covered_Begin_Date__c</fullName>
        <label>Message Period Covered Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message_Period_Covered_End_Date__c</fullName>
        <label>Message Period Covered End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message_Period_of_Review_Begin_Date__c</fullName>
        <label>Message Period of Review Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message_Period_of_Review_End_Date__c</fullName>
        <label>Message Period of Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message_Status__c</fullName>
        <label>Message Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Petition</label>
        <referenceTo>Petition__c</referenceTo>
        <relationshipLabel>Custom Instructions</relationshipLabel>
        <relationshipName>Custom_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text__c</fullName>
        <label>Product Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Text__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Indicator__c</fullName>
        <label>Public Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Custom Instructions</relationshipLabel>
        <relationshipName>Custom_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suspension_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspension Agreement</label>
        <referenceTo>Suspension_Agreement__c</referenceTo>
        <relationshipLabel>Custom Instructions</relationshipLabel>
        <relationshipName>Custom_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Custom Instruction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Petition__c</columns>
        <columns>Investigation__c</columns>
        <columns>ADCVD_Order__c</columns>
        <columns>Product_Text__c</columns>
        <columns>Country__c</columns>
        <columns>Suspension_Agreement__c</columns>
        <columns>Segment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Customs_Instructions_ClosedLocked_Queue_Custom_Instruction</fullName>
        <filterScope>Queue</filterScope>
        <label>Customs Instructions-ClosedLocked Queue</label>
        <queue>Customs_Instructions_ClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customs_Instructions_MigratedLockedQueue_Custom_Instruction</fullName>
        <filterScope>Queue</filterScope>
        <label>Customs Instructions-MigratedLockedQueue</label>
        <queue>Customs_Instructions_MigratedLockedQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customs_Instructions_Open_Queue_Custom_Instruction</fullName>
        <filterScope>Queue</filterScope>
        <label>Customs Instructions-Open Queue</label>
        <queue>Customs_Instructions_Open_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Custom Instruction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_Locked_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Permission.Edit_ADCVD_Locked_Records == false, 
NOT(ISNEW()), 
OR (Locked__c == true, 
PRIORVALUE(Locked__c) == true 
) 
)</errorConditionFormula>
        <errorMessage>This record is locked.  Please contact your administrator about unlocking this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Admin_reparents_Custom_Instruction</fullName>
        <active>false</active>
        <description>Custom Instruction records can only be reparented by a System Administrator.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, 
Locked__c == false, 
NOT( ISNEW() ), 
OR(ISCHANGED(ADCVD_Order__c), ISCHANGED(Investigation__c),ISCHANGED(Petition__c),ISCHANGED(Segment__c),ISCHANGED(Suspension_Agreement__c)),
$Profile.Name 
&lt;&gt; 
&quot;System Administrator&quot; 
)</errorConditionFormula>
        <errorMessage>You are not authorized to edit this field. Only a System Administrator can edit the parent ADCVD Order, Investigation, Petition, Segment, or Suspension Agreement for this record.</errorMessage>
    </validationRules>
</CustomObject>